tests/ui/fmt/ifmt-unimpl.stderr
error[E0277]: the trait bound `str: UpperHex` is not satisfied
  --> $DIR/ifmt-unimpl.rs:2:21
   |
LL |     format!("{:X}", "3");
   |              ----   ^^^ the trait `UpperHex` is not implemented for `str`
   |              |
   |              required by a bound introduced by this call
   |
   = help: the following other types implement trait `UpperHex`:
             &T
             &mut T
             NonZero<T>
             Saturating<T>
             Wrapping<T>
             i128
             i16
             i32
           and 9 others
   = note: required for `&str` to implement `UpperHex`
note: required by a bound in `core::fmt::rt::ArgumentsVTableBuilder::<R>::prepend_fmt_upper_hex`
  --> $SRC_DIR/core/src/fmt/rt.rs:LL:COL
   = note: this error originates in the macro `$crate::__export::format_args` which comes from the expansion of the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `str: UpperHex` is not satisfied
  --> $DIR/ifmt-unimpl.rs:2:5
   |
LL |     format!("{:X}", "3");
   |     ^^^^^^^^^^^^^^^^^^^^ the trait `UpperHex` is not implemented for `str`
   |
   = help: the following other types implement trait `UpperHex`:
             &T
             &mut T
             NonZero<T>
             Saturating<T>
             Wrapping<T>
             i128
             i16
             i32
           and 9 others
   = note: required for `&str` to implement `UpperHex`
   = note: required for `core::fmt::rt::FmtUpperHex<&str, core::fmt::rt::Noop>` to implement `core::fmt::rt::FmtOp`
note: required by a bound in `core::fmt::rt::ArgumentsVTableBuilder::<R>::finish`
  --> $SRC_DIR/core/src/fmt/rt.rs:LL:COL
   = note: this error originates in the macro `$crate::__export::format_args` which comes from the expansion of the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
